# stash

./: .gitignore  Cargo.toml  README.md  antigravity.md  install.ps1  install.sh  memory.md  updates.md  walkthrough.md
.github/workflows/: release.yml
src/: main.rs
src/app/: mod.rs
src/audio/: mod.rs
src/browser/: mod.rs
src/collections/: mod.rs
src/config/: mod.rs
src/discord/: mod.rs
src/events/: mod.rs
src/healer/: backup.rs  filename.rs  fingerprint.rs  mod.rs  musicbrainz.rs  pipeline.rs
src/models/: mod.rs
src/queue/: mod.rs
src/search/: mod.rs
src/stats/: mod.rs
src/ui/: mod.rs
src/updater/: mod.rs
