[package]
name = "stash"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
rodio = { version = "0.19", features = ["symphonia-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
anyhow = "1.0"
dirs = "5.0"
lofty = "0.21"
rand = "0.8"
