[package]
name = "stash"
version = "0.3.0"
edition = "2024"
authors = ["gibranlp"]
homepage = "https://gibranlp.dev"
repository = "https://github.com/gibranlp/stash"
description = "A fast, keyboard-driven terminal music browser, player, and file organizer."

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
rodio = { version = "0.19", features = ["symphonia-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
anyhow = "1.0"
dirs = "5.0"
lofty = "0.21"
rand = "0.8"
souvlaki = "0.8.3"
image = "0.24"
ratatui-image = { version = "0.5.1", features = ["crossterm"] }
base64 = "0.21"

